// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty taf renders empty 1`] = `
<div
  class="tafs"
/>
`;

exports[`no taf renders empty 1`] = `
<div
  class="tafs"
/>
`;

exports[`taf renders properly 1`] = `
<div
  class="tafs"
>
  <div
    class="notif-text"
  >
    TAF CYMX 011742Z 0118/0218 25012G22KT P6SM SCT250
  </div>
  <div
    class="notif-text"
  >
    BECMG 0122/0124 25007KT
  </div>
  <div
    class="notif-text"
  >
    FM021000 24007KT P6SM BKN180
  </div>
  <div
    class="notif-text"
  >
    FM021200 24008KT P6SM BKN050
  </div>
  <div
    class="notif-text"
  >
    FM021400 23012G22KT 4SM -SN BLSN BKN020 OVC040 PROB30 0214/0218
     21/2SM -SN BLSN
  </div>
  <div
    class="notif-text"
  >
    RMK NXT FCST BY 020000Z
  </div>
</div>
`;

exports[`taf renders properly 2`] = `
<div
  class="tafs"
>
  <div
    class="notif-text"
  >
    TAF AMD EGPK 011833Z 0118/0218 VRB04KT 9999 SCT040 TEMPO 0118/0121 4000 SHSN BKN008
  </div>
</div>
`;

exports[`taf renders properly 3`] = `
<div
  class="tafs"
/>
`;
